LIST ( APPEND NEQ_files
Euler1DNEQCons.cxx
Euler1DNEQCons.hh
Euler1DNEQRhoivt.cxx
Euler1DNEQRhoivt.hh
Euler1DNEQRhoivtToCons.cxx
Euler1DNEQRhoivtToCons.hh
Euler1DNEQRhoivtTv.cxx
Euler1DNEQRhoivtTv.hh
Euler1DNEQRhoivtTvToCons.cxx
Euler1DNEQRhoivtTvToCons.hh
Euler1DNEQRhoivtTvToConsInRhoivtTv.hh
Euler1DNEQRhoivtTvToConsInRhoivtTv.cxx
Euler1DNEQPvtToRhoivt.hh
Euler1DNEQPvtToRhoivt.cxx
Euler1DNEQPvtToRhoivtTv.hh
Euler1DNEQPvtToRhoivtTv.cxx
Euler2DNEQCons.cxx
Euler2DNEQCons.hh
Euler2DNEQConsCNEQ.cxx
Euler2DNEQConsCNEQ.hh
Euler2DNEQConsToSymmInRef.cxx
Euler2DNEQConsToSymmInRef.hh
Euler2DNEQConsToSymm1InRef.cxx
Euler2DNEQConsToSymm1InRef.hh
Euler2DNEQLinearCons.cxx
Euler2DNEQLinearCons.hh
Euler2DNEQLinearConsCNEQ.cxx
Euler2DNEQLinearConsCNEQ.hh
Euler2DNEQLinearRhoivtCNEQ.cxx
Euler2DNEQLinearRhoivtCNEQ.hh
Euler2DNEQLinearRhoivtTv.cxx
Euler2DNEQLinearRhoivtTv.hh
Euler2DNEQLinearRoe.cxx
Euler2DNEQLinearRoe.hh
Euler2DNEQMachAlphaPTyiToRhoivtTv.hh
Euler2DNEQMachAlphaPTyiToRhoivtTv.cxx
Euler2DNEQPivt.hh
Euler2DNEQPivt.cxx
Euler2DNEQPivtTv.hh
Euler2DNEQPivtTv.cxx
Euler2DNEQPivtTvToCons.hh
Euler2DNEQPivtTvToCons.cxx
Euler2DNEQPivtTvToRhoivtTv.hh
Euler2DNEQPivtTvToRhoivtTv.cxx
Euler2DNEQPuvtToRhoivtTv.hh
Euler2DNEQPuvtToRhoivtTv.cxx
Euler2DNEQPuvtToPivtTv.hh
Euler2DNEQPuvtToPivtTv.cxx
Euler2DNEQPvty.cxx
Euler2DNEQPvty.hh
Euler2DNEQPvtyToCons.cxx
Euler2DNEQPvtyToCons.hh
Euler2DNEQRhoivt.cxx
Euler2DNEQRhoivt.hh
Euler2DNEQRhoivtToCons.cxx
Euler2DNEQRhoivtToCons.hh
Euler2DNEQRhoivtToConsCNEQ.cxx
Euler2DNEQRhoivtToConsCNEQ.hh
Euler2DNEQRhoivtTv.cxx
Euler2DNEQRhoivtTv.hh
Euler2DNEQRhoivtTvToCons.cxx
Euler2DNEQRhoivtTvToCons.hh
Euler2DNEQRhoivtTvToConsInRef.cxx
Euler2DNEQRhoivtTvToConsInRef.hh
Euler2DNEQRhoivtTvToConsInRhoivtTv.cxx
Euler2DNEQRhoivtTvToConsInRhoivtTv.hh
Euler2DNEQRhoivtTvToPivtTv.cxx
Euler2DNEQRhoivtTvToPivtTv.hh
Euler2DNEQRhoivtTvToRoeVinokur.cxx
Euler2DNEQRhoivtTvToRoeVinokur.hh
Euler2DNEQRhovtXiToPivtTv.cxx
Euler2DNEQRhovtXiToPivtTv.hh
Euler2DNEQRhovtXiToRhoivtTv.cxx
Euler2DNEQRhovtXiToRhoivtTv.hh
Euler2DNEQRoe.cxx
Euler2DNEQRoe.hh
Euler2DNEQRoeVinokur.cxx
Euler2DNEQRoeVinokur.hh
Euler2DNEQRoeToConsInRef.cxx
Euler2DNEQRoeToConsInRef.hh
Euler2DNEQRoeVinokurToConsInRef.cxx
Euler2DNEQRoeVinokurToConsInRef.hh
Euler2DNEQSymm.cxx
Euler2DNEQSymm.hh
Euler2DNEQSymm1.cxx
Euler2DNEQSymm1.hh
Euler2DNEQSymmToConsInRef.cxx
Euler2DNEQSymmToConsInRef.hh
Euler2DNEQSymm1ToConsInRef.cxx
Euler2DNEQSymm1ToConsInRef.hh
Euler3DNEQCons.cxx
Euler3DNEQCons.hh
Euler3DNEQPvtToRhoivtTv.hh
Euler3DNEQPvtToRhoivtTv.cxx
Euler3DNEQPvtToRhoivt.hh
Euler3DNEQPvtToRhoivt.cxx
Euler3DNEQPvty.cxx
Euler3DNEQPvty.hh
Euler3DNEQPvtyToCons.cxx
Euler3DNEQPvtyToCons.hh
Euler3DNEQRhoivt.cxx
Euler3DNEQRhoivt.hh
Euler3DNEQRhoivtToCons.cxx
Euler3DNEQRhoivtToCons.hh
Euler3DNEQRhoivtTv.cxx
Euler3DNEQRhoivtTv.hh
Euler3DNEQRhoivtTvToCons.cxx
Euler3DNEQRhoivtTvToCons.hh
Euler3DNEQRhovtXiToRhoivtTv.cxx #new addition: Vatsalya
Euler3DNEQRhovtXiToRhoivtTv.hh
EulerNEQ.ci
EulerNEQ.cxx
EulerNEQ.hh
NEQ.hh
NavierStokesNEQPvty.ci
NavierStokesNEQPvty.cxx
NavierStokesNEQPvty.hh
NavierStokesNEQRhoivt.ci
NavierStokesNEQRhoivt.cxx
NavierStokesNEQRhoivt.hh
NavierStokesCNEQVarSet.ci
NavierStokesCNEQVarSet.hh
NavierStokesTCNEQVarSet.ci
NavierStokesTCNEQVarSet.hh
NavierStokesNEQPivt.cxx
NavierStokesNEQPivt.ci
NavierStokesNEQPivt.hh
NavierStokesNEQ.ci
NavierStokesNEQ.cxx
NavierStokesNEQ.hh
NavierStokesNEQVarSet.ci
NavierStokesNEQVarSet.hh
NEQReactionTerm.hh
NEQReactionTerm.cxx
)


LIST ( APPEND NEQ_cflibs Framework NavierStokes)
LIST ( APPEND NEQ_requires_mods NavierStokes )

CF_ADD_PLUGIN_LIBRARY ( NEQ )
CF_WARN_ORPHAN_FILES()
ADD_SUBDIRECTORY ( testcases )
