LIST ( APPEND NavierStokes_files
ConstantDynViscosity.cxx
ConstantDynViscosity.hh
DynamicViscosityLaw.cxx
DynamicViscosityLaw.hh
EntropyConvVarSet.ci
EntropyConvVarSet.hh
EulerPvtToCons.cxx
EulerPvtToCons.hh
Euler1DPvt.cxx
Euler1DPvt.hh
Euler1DCons.cxx
Euler1DCons.hh
Euler1DConsToRoe.cxx
Euler1DConsToRoe.hh
Euler1DPvtToRoe.cxx
Euler1DPvtToRoe.hh
Euler1DVarSet.cxx
Euler1DVarSet.hh
Euler1DLinearRoe.cxx
Euler1DLinearRoe.hh
Euler2DChar.cxx
Euler2DChar.hh
Euler2DCharToConsInRef.cxx
Euler2DCharToConsInRef.hh
Euler2DCons.cxx
Euler2DCons.hh
Euler2DConsToCharInCons.cxx
Euler2DConsToCharInCons.hh
Euler2DConsToCharInRef.cxx
Euler2DConsToCharInRef.hh
Euler2DConsToPrim.cxx
Euler2DConsToPrim.hh
Euler2DConsToPrimInCons.cxx
Euler2DConsToPrimInCons.hh
Euler2DConsToPrimInPrim.cxx
Euler2DConsToPrimInPrim.hh
Euler2DConsToPuvt.cxx
Euler2DConsToPuvt.hh
Euler2DConsToPuvtInPuvt.cxx
Euler2DConsToPuvtInPuvt.hh
Euler2DConsToRhovt.cxx
Euler2DConsToRhovt.hh
Euler2DConsToRhovtInRhovt.cxx
Euler2DConsToRhovtInRhovt.hh
Euler2DConsToRoe.cxx
Euler2DConsToRoe.hh
Euler2DConsToRoeInCons.cxx
Euler2DConsToRoeInCons.hh
Euler2DConsToRoeInPrim.cxx
Euler2DConsToRoeInPrim.hh
Euler2DConsToRoeInPuvt.cxx
Euler2DConsToRoeInPuvt.hh
Euler2DConsToSymmInCons.cxx
Euler2DConsToSymmInCons.hh
Euler2DConsToSymmInRef.cxx
Euler2DConsToSymmInRef.hh
Euler2DLinearCons.cxx
Euler2DLinearCons.hh
Euler2DLinearPrim.cxx
Euler2DLinearPrim.hh
Euler2DLinearPuvt.cxx
Euler2DLinearPuvt.hh
Euler2DLinearRhovt.cxx
Euler2DLinearRhovt.hh
Euler2DLinearRoe.cxx
Euler2DLinearRoe.hh
Euler2DMachAlphaPTToCons.cxx
Euler2DMachAlphaPTToCons.hh
Euler2DMachAlphaPTToPuvt.cxx
Euler2DMachAlphaPTToPuvt.hh
Euler2DPrim.cxx
Euler2DPrim.hh
Euler2DPrimToCons.cxx
Euler2DPrimToCons.hh
Euler2DPrimToConsInRef.cxx
Euler2DPrimToConsInRef.hh
Euler2DPrimToRoe.cxx
Euler2DPrimToRoe.hh
Euler2DPuvt.cxx
Euler2DPuvt.hh
Euler2DPuvtIncompToPuvt.cxx
Euler2DPuvtIncompToPuvt.hh
Euler2DPuvtToConsInPuvt.cxx
Euler2DPuvtToConsInPuvt.hh
Euler2DPuvtToConsInRef.cxx
Euler2DPuvtToConsInRef.hh
Euler2DPuvtToPrim.cxx
Euler2DPuvtToPrim.hh
Euler2DPuvtToRoe.cxx
Euler2DPuvtToRoe.hh
Euler2DRhoMachAlphaPToCons.cxx
Euler2DRhoMachAlphaPToCons.hh
Euler2DRhoMachAlphaPToPuvt.cxx
Euler2DRhoMachAlphaPToPuvt.hh
Euler2DRhovt.cxx
Euler2DRhovt.hh
Euler2DRhovtToCons.cxx
Euler2DRhovtToCons.hh
Euler2DRhovtToConsInRef.cxx
Euler2DRhovtToConsInRef.hh
Euler2DRhovtToConsInRhovt.cxx
Euler2DRhovtToConsInRhovt.hh
Euler2DRoe.cxx
Euler2DRoe.hh
Euler2DRoeToCharInRef.cxx
Euler2DRoeToCharInRef.hh
Euler2DRoeToConsInCons.cxx
Euler2DRoeToConsInCons.hh
Euler2DRoeToConsInRef.cxx
Euler2DRoeToConsInRef.hh
Euler2DRoeToPrimInRef.cxx
Euler2DRoeToPrimInRef.hh
Euler2DRoeToSymmInRef.cxx
Euler2DRoeToSymmInRef.hh
Euler2DSymm.cxx
Euler2DSymm.hh
Euler2DSymmToConsInRef.cxx
Euler2DSymmToConsInRef.hh
Euler2DVarSet.cxx
Euler2DVarSet.hh
Euler3DCons.cxx
Euler3DCons.hh
Euler3DConsToPvtInPvt.cxx
Euler3DConsToPvtInPvt.hh
Euler3DConsToPrim.hh
Euler3DConsToPrim.cxx
Euler3DConsToRoe.cxx
Euler3DConsToRoe.hh
Euler3DConsToRoeInCons.cxx
Euler3DConsToRoeInCons.hh
Euler3DRotationCons.cxx
Euler3DRotationCons.hh
Euler3DLinearCons.cxx
Euler3DLinearCons.hh
Euler3DLinearRoe.cxx
Euler3DLinearRoe.hh
Euler3DMachAlphaPTToCons.cxx
Euler3DMachAlphaPTToCons.hh
Euler3DMachAlphaPTToPvt.cxx
Euler3DMachAlphaPTToPvt.hh
Euler3DPrimToRoe.cxx
Euler3DPrimToRoe.hh
Euler3DPrim.hh
Euler3DPrim.cxx
Euler3DPvt.cxx
Euler3DPvt.ci
Euler3DPvt.hh
Euler3DPvtToConsInPvt.cxx
Euler3DPvtToConsInPvt.hh
Euler3DPvtToRoe.cxx
Euler3DPvtToRoe.hh
Euler3DRoe.cxx
Euler3DRoe.hh
Euler3DRoeToConsInRef.cxx
Euler3DRoeToConsInRef.hh
Euler3DVarSet.cxx
Euler3DVarSet.hh
Euler3DRotationVarSet.cxx
Euler3DRotationVarSet.hh
EulerPhysicalModel.ci
EulerPhysicalModel.cxx
EulerPhysicalModel.hh
EulerTerm.cxx
EulerTerm.hh
EulerVarSet.hh
FixedDynViscosity.cxx
FixedDynViscosity.hh
FixedKinViscosity.cxx
FixedKinViscosity.hh
MultiScalarVarSet.ci
MultiScalarVarSet.hh
NSTerm.cxx
NSTerm.hh
NSTurbTerm.cxx
NSTurbTerm.hh
NavierStokes.hh
NavierStokes2DCons.cxx
NavierStokes2DCons.hh
NavierStokes1DCons.cxx
NavierStokes1DCons.hh
NavierStokes1DPvt.cxx
NavierStokes1DPvt.hh
NavierStokes1DRhovt.cxx
NavierStokes1DRhovt.hh
NavierStokes2DPuvt.cxx
NavierStokes2DPuvt.hh
NavierStokes2DRhovt.cxx
NavierStokes2DRhovt.hh
NavierStokes1DVarSet.cxx
NavierStokes1DVarSet.hh
NavierStokes2DVarSet.cxx
NavierStokes2DVarSet.hh
NavierStokes3DCons.cxx
NavierStokes3DCons.hh
NavierStokes3DPvt.cxx
NavierStokes3DPvt.hh
NavierStokes3DVarSet.cxx
NavierStokes3DVarSet.hh
NavierStokesData.hh
NavierStokesPhysicalModel.ci
NavierStokesPhysicalModel.cxx
NavierStokesPhysicalModel.hh
NavierStokesTurbVarSet.ci
NavierStokesTurbVarSet.hh
NavierStokesTurbVarSetTypes.hh
NavierStokesVarSet.cxx
NavierStokesVarSet.hh
RMS.cxx
RMS.hh
RMSTurb.cxx
RMSTurb.hh
SimplerSutherlandDynViscosity.cxx
SimplerSutherlandDynViscosity.hh
SutherlandDynViscosity.cxx
SutherlandDynViscosity.hh
CreateDampingCoefficientDNS.cxx
CreateDampingCoefficientDNS.hh
)

LIST ( APPEND NavierStokes_cflibs Framework )
CF_ADD_PLUGIN_LIBRARY ( NavierStokes )
CF_WARN_ORPHAN_FILES()
ADD_SUBDIRECTORY ( testcases )
