LIST ( APPEND RadiativeTransfer_files
RadiativeTransfer.hh
RadiativeTransferOutputFVMCC.cxx
RadiativeTransferOutputFVMCC.hh
RadiationLibrary/RadiationPhysics.hh
RadiationLibrary/RadiationPhysics.cxx
RadiationLibrary/RadiationPhysicsHandler.hh
RadiationLibrary/RadiationPhysicsHandler.cxx
RadiationLibrary/Radiator.hh
RadiationLibrary/Radiator.cxx
RadiationLibrary/Reflector.hh
RadiationLibrary/Reflector.cxx
RadiationLibrary/Models/Grey/GreyRadiator.hh
RadiationLibrary/Models/Grey/GreyRadiator.cxx
RadiationLibrary/Models/Null/NullRadiator.hh
RadiationLibrary/Models/Null/NullRadiator.cxx
RadiationLibrary/Models/Null/NullReflector.hh
RadiationLibrary/Models/Null/NullReflector.cxx
RadiationLibrary/Models/ArcJet/ArcJetRadiator.hh
RadiationLibrary/Models/ArcJet/ArcJetRadiator.cxx
RadiationLibrary/Models/PARADE/ParadeRadiator.hh
RadiationLibrary/Models/PARADE/ParadeRadiator.cxx
RadiationLibrary/Models/Reflection/DiffuseReflector.hh
RadiationLibrary/Models/Reflection/DiffuseReflector.cxx
RadiationLibrary/Models/Reflection/SpecularReflector.hh
RadiationLibrary/Models/Reflection/SpecularReflector.cxx
RadiationLibrary/Models/HSNB/HSNBRadiator.hh
RadiationLibrary/Models/HSNB/HSNBRadiator.cxx
RadiationLibrary/Models/HSNB/core/AbsorptionData.h
RadiationLibrary/Models/HSNB/core/AtomicLines.h
RadiationLibrary/Models/HSNB/core/AtomicLines.cpp
RadiationLibrary/Models/HSNB/core/AtomicPartFunc.h
RadiationLibrary/Models/HSNB/core/AtomicPartFunc.cpp
RadiationLibrary/Models/HSNB/core/Chineq.h
RadiationLibrary/Models/HSNB/core/Chineq.cpp
RadiationLibrary/Models/HSNB/core/AtomicLines.h
RadiationLibrary/Models/HSNB/core/Constants.h
RadiationLibrary/Models/HSNB/core/HydrogenPartFunc.h
RadiationLibrary/Models/HSNB/core/LblAtomicSystem.h
RadiationLibrary/Models/HSNB/core/LblAtomicSystem.cpp
RadiationLibrary/Models/HSNB/core/LblRteSolution.h
RadiationLibrary/Models/HSNB/core/LblRteSolution.cpp
RadiationLibrary/Models/HSNB/core/LblSpectralGrid.h
RadiationLibrary/Models/HSNB/core/LblSpectralGrid.cpp
RadiationLibrary/Models/HSNB/core/LblSpectralGrid.h
RadiationLibrary/Models/HSNB/core/LblSpectralGrid.cpp
RadiationLibrary/Models/HSNB/core/LineData.h
RadiationLibrary/Models/HSNB/core/LorentzHydrogen.h
RadiationLibrary/Models/HSNB/core/LorentzModel.h
RadiationLibrary/Models/HSNB/core/LorentzTopbase.h
RadiationLibrary/Models/HSNB/core/MolecularElecPartFunc.h
RadiationLibrary/Models/HSNB/core/MolecularElecPartFunc.cpp
RadiationLibrary/Models/HSNB/core/MolecularPartFunc.h
RadiationLibrary/Models/HSNB/core/MolecularPartFunc.cpp
RadiationLibrary/Models/HSNB/core/Operators.h
RadiationLibrary/Models/HSNB/core/PartitionFunction.h
RadiationLibrary/Models/HSNB/core/ProbDistFunc.h
RadiationLibrary/Models/HSNB/core/QssAtoms.cpp
RadiationLibrary/Models/HSNB/core/QssAtoms.h
RadiationLibrary/Models/HSNB/core/QssMolecules.cpp
RadiationLibrary/Models/HSNB/core/QssMolecules.h
RadiationLibrary/Models/HSNB/core/RadiativeSystem.h
RadiationLibrary/Models/HSNB/core/HSNBSharedPtr.h
RadiationLibrary/Models/HSNB/core/SnbAtomicSystem.h
RadiationLibrary/Models/HSNB/core/SnbAtomicSystem.cpp
RadiationLibrary/Models/HSNB/core/SnbCO2System.h
RadiationLibrary/Models/HSNB/core/SnbCO2System.cpp
RadiationLibrary/Models/HSNB/core/SnbContinuumSystem.h
RadiationLibrary/Models/HSNB/core/SnbContinuumSystem.cpp
RadiationLibrary/Models/HSNB/core/SnbDiatomicSystem.h
RadiationLibrary/Models/HSNB/core/SnbDiatomicSystem.cpp
RadiationLibrary/Models/HSNB/core/StringUtils.h
RadiationLibrary/Models/HSNB/core/StringUtils.cpp
RadiationLibrary/Models/HSNB/core/Voigt.h
RadiationLibrary/Models/HSNB/core/Voigt.cpp
RadiationLibrary/Models/HSNB/core/Random.h
RadiationLibrary/Models/HSNB/core/Random.cpp
RadiationLibrary/Models/HSNB/core/PhotonPath.h
RadiationLibrary/Models/HSNB/core/PhotonPath.cpp
RadiationLibrary/Models/HSNB/core/SpeciesData.h
RadiationLibrary/Models/HSNB/core/ThermoData.cpp
RadiationLibrary/Models/HSNB/core/ThermoData.h
RadiationLibrary/Models/HSNB/core/RadiationFieldData.cpp
RadiationLibrary/Models/HSNB/core/RadiationFieldData.h
RadiationLibrary/Models/HSNB/HSNBRadiator.cxx
Solvers/MonteCarlo/PhotonData.hh
Solvers/MonteCarlo/HSNBPhotonData.hh
Solvers/MonteCarlo/HSNBLocalParameterSet.hh
Solvers/MonteCarlo/HSNBParamSynchronizer.hh
Solvers/MonteCarlo/HSNBParamSynchronizer.cxx
Solvers/MonteCarlo/HSNBPhotonTrace.hh
Solvers/MonteCarlo/HSNBPhotonTrace.cxx
Solvers/MonteCarlo/RadiativeTransferMonteCarlo.hh
Solvers/MonteCarlo/RadiativeTransferMonteCarlo.cxx
Solvers/MonteCarlo/RadiativeTransferMonteCarloHSNB.hh
Solvers/MonteCarlo/RadiativeTransferMonteCarloHSNB.cxx
Solvers/MonteCarlo/RandomNumberGenerator.hh
Solvers/MonteCarlo/RandomNumberGenerator.cxx
Solvers/FiniteVolumeDOM/RadiativeTransferFVDOM.cxx
Solvers/FiniteVolumeDOM/RadiativeTransferFVDOM.hh
PostProcess/PostProcessAverage.cxx
PostProcess/PostProcessAverage.hh
PostProcess/PostProcess.cxx
PostProcess/PostProcess.hh
PostProcess/PostProcessNull.cxx
PostProcess/PostProcessNull.hh
PostProcess/PostProcessModule.hh
)

IF (CF_HAVE_GSL)
   LIST ( APPEND RadiativeTransfer_includedirs ${GSL_INCLUDE_DIR} )
   LIST ( APPEND RadiativeTransfer_libs ${GSL_LIBRARY} ${BLAS_LIBRARY} )
   LIST ( APPEND RadiativeTransfer_files
     PostProcess/PostProcessLSF.cxx
     PostProcess/PostProcessLSF.hh
   )
ENDIF()

IF (CF_HAVE_CUDA)
  LIST ( APPEND RadiativeTransfer_includedirs ${MPI_INCLUDE_DIR} ${CUDA_INCLUDE_DIR} )
  LIST ( APPEND RadiativeTransfer_libs ${CUDA_LIBRARIES} )
  LIST ( APPEND RadiativeTransferCUDA_cflibs FiniteVolume RadiativeTransfer )
  LIST ( APPEND RadiativeTransfer_files
    RadiationLibrary/Models/PARADE/ParadeRadiatorCUDA.cu
    RadiationLibrary/Models/PARADE/ParadeRadiatorCUDA.hh
    Solvers/FiniteVolumeDOM/RadiativeTransferFVDOMCUDA.cu
    Solvers/FiniteVolumeDOM/RadiativeTransferFVDOMCUDA.hh
    )
ENDIF()

LIST ( APPEND RadiativeTransfer_cflibs Framework LagrangianSolver FiniteVolume )
CF_ADD_PLUGIN_LIBRARY ( RadiativeTransfer )
CF_WARN_ORPHAN_FILES()
ADD_SUBDIRECTORY ( testcases )
